--- a/scripts/Data_evaluation/temp.ipynb
+++ b/scripts/Data_evaluation/temp.ipynb
@@ -5,12 +5,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 安徽安庆市项目`WRF-CMAQ`模拟分析\n",
+    "# 杭州市萧山区项目`WRF-CMAQ`模拟分析\n",
     "## Model Evaluation : `meteo-obs data temperature`\n",
     "\n",
     "---\n",
     "*@author: Evan*\\\n",
-    "*@date: 2023-05-07*"
+    "*@date: 2023-08-29*"
    ]
   },
   {
@@ -19,21 +19,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.append('../../src/')\n",
-    "import ModelEvaLib as me\n",
-    "from namelist import *\n",
-    "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# silence the warning note\n",
     "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")"
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
+    "import sys\n",
+    "sys.path.append('../../src/')\n",
+    "import ModelEvaLib as me\n",
+    "from namelist import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,12 +49,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 安庆市全部"
+    "## 杭州市全部"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -63,14 +63,34 @@
      "text": [
       "Get the SFC_TMP in shape of (744, 138, 135)\n",
       "Extract the data within the boundary ...\n",
-      "Finish\n",
-      "Get the 气温 in shape of (744,)\n",
-      "data is ready\n"
+      "Finish\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'气温'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[1;32mc:\\Users\\73923\\anaconda3\\lib\\site-packages\\pandas\\core\\indexes\\base.py:3802\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m   3801\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m-> 3802\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_engine\u001b[39m.\u001b[39;49mget_loc(casted_key)\n\u001b[0;32m   3803\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n",
+      "File \u001b[1;32mc:\\Users\\73923\\anaconda3\\lib\\site-packages\\pandas\\_libs\\index.pyx:138\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mc:\\Users\\73923\\anaconda3\\lib\\site-packages\\pandas\\_libs\\index.pyx:165\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi:5745\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi:5753\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: '气温'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m df, sim, obs \u001b[39m=\u001b[39m me\u001b[39m.\u001b[39;49mget_var(mcipfile,var,shphz,obshz,varch)\n",
+      "File \u001b[1;32md:\\Academic\\Project\\Xiaoshan\\XS_2305\\scripts\\Data_evaluation\\../../src\\ModelEvaLib.py:60\u001b[0m, in \u001b[0;36mget_var\u001b[1;34m(ncfile, var, shpfile, xlsfile, varch)\u001b[0m\n\u001b[0;32m     57\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mFinish\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m     59\u001b[0m obsdata \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_excel(xlsfile)\n\u001b[1;32m---> 60\u001b[0m obs \u001b[39m=\u001b[39m obsdata[varch]\n\u001b[0;32m     61\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mGet the \u001b[39m\u001b[39m'\u001b[39m \u001b[39m+\u001b[39m \u001b[39mstr\u001b[39m(varch) \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m in shape of \u001b[39m\u001b[39m'\u001b[39m \u001b[39m+\u001b[39m \u001b[39mstr\u001b[39m(obs\u001b[39m.\u001b[39mshape))\n\u001b[0;32m     62\u001b[0m \u001b[39mif\u001b[39;00m obs\u001b[39m.\u001b[39mshape \u001b[39m==\u001b[39m sim\u001b[39m.\u001b[39mshape:\n",
+      "File \u001b[1;32mc:\\Users\\73923\\anaconda3\\lib\\site-packages\\pandas\\core\\frame.py:3807\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3805\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcolumns\u001b[39m.\u001b[39mnlevels \u001b[39m>\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[0;32m   3806\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_getitem_multilevel(key)\n\u001b[1;32m-> 3807\u001b[0m indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcolumns\u001b[39m.\u001b[39;49mget_loc(key)\n\u001b[0;32m   3808\u001b[0m \u001b[39mif\u001b[39;00m is_integer(indexer):\n\u001b[0;32m   3809\u001b[0m     indexer \u001b[39m=\u001b[39m [indexer]\n",
+      "File \u001b[1;32mc:\\Users\\73923\\anaconda3\\lib\\site-packages\\pandas\\core\\indexes\\base.py:3804\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m   3802\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_engine\u001b[39m.\u001b[39mget_loc(casted_key)\n\u001b[0;32m   3803\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n\u001b[1;32m-> 3804\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(key) \u001b[39mfrom\u001b[39;00m \u001b[39merr\u001b[39;00m\n\u001b[0;32m   3805\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mTypeError\u001b[39;00m:\n\u001b[0;32m   3806\u001b[0m     \u001b[39m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[0;32m   3807\u001b[0m     \u001b[39m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[0;32m   3808\u001b[0m     \u001b[39m#  the TypeError.\u001b[39;00m\n\u001b[0;32m   3809\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_check_indexing_error(key)\n",
+      "\u001b[1;31mKeyError\u001b[0m: '气温'"
      ]
     }
    ],
    "source": [
-    "df, sim, obs = me.get_var(mcipfile,var,shpall,obsall,varch)"
+    "df, sim, obs = me.get_var(mcipfile,var,shphz,obshz,varch)"
    ]
   },
   {
@@ -93,7 +113,7 @@
     "ax = me.linechart(sim, obs, timestart, timeend)\n",
     "\n",
     "ax.legend(loc=2)\n",
-    "ax.set_title(f'{title} in Anqing')\n",
+    "ax.set_title(f'{title} in Xiaoshan')\n",
     "ax.set_xlabel('Date')\n",
     "ax.set_ylabel(units)\n",
     "plt.show()"
